<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.tourguide.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50">

        <TextView
            android:id="@+id/adventures"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/adventures"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF9800">

        <TextView
            android:id="@+id/food_and_drink"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/food_and_drink"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3">

        <TextView
            android:id="@+id/private_tours"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/private_tours"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F44336">

        <TextView
            android:id="@+id/theme_parks"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:text="@string/theme_parks"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </FrameLayout>

</LinearLayout>
